# route-optimizer

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt  route_optimizer.py
.github/workflows/: ci.yml
data/: clientes.csv  generate_data.py
src/route_optimizer/: __init__.py  baseline.py  cli.py  config.py  kpis.py  matrix.py  solution.py  solver.py
tests/: test_baseline.py  test_kpis.py  test_matrix.py  test_solver.py
